--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 This project helped me to improve my C programming skills and understand the basic
                                 artificial intelligence concepts.</li>
 
-                            
+
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -100,10 +100,11 @@
             <div class="workcol">
                 <div class="work-col-1">
                     <img src="./images/work.jpg" alt="">
-                    <div class="workp">
-                        <h3>Counter App</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit non doloremque at ratione vel
-                            temporibus tempora pariatur.</p>
+                    <div class="workp" onclick="gotoproject()">
+                        <h3>City-Weather-App</h3>
+                        <p>Instantly fetches accurate weather information for any city worldwide, delivering real-time
+                            forecasts and essential meteorological data at your fingertips.Stay informed and plan your
+                            day with confidence.</p>
                     </div>
                 </div>
                 <div class="work-col-1">
