--- a/index.html
+++ b/index.html
@@ -70,11 +70,19 @@
                     </div>
                     <div class="tab-contents" id="projects">
                         <ul>
-                            <li><span>Tic-Tac-Toe - Game with System [2020]</span><br>This project is a Tic-tac-toe game
+                            <li><span onclick="gotogit(1)">ChatApplication - Local System Messenger [2021]</span><br> Developed a Java chat
+                                application using Socket programming and Swing that enables two local end-users to
+                                communicate
+                                through instant messaging. The project provided me with a valuable opportunity to
+                                strengthen my expertise in Java
+                                exception handling, threads, and Swing GUI design, enabling me to enhance my overall
+                                proficiency in the language.</li>
+                            <li><span onclick="gotogit(2)">Tic-Tac-Toe - Game with System [2020]</span><br>This project is a Tic-tac-toe game
                                 implemented in C language, where one player is the system itself, and it makes random
                                 moves. The game includes error handling, input validation, and handling tie situations.
                                 This project helped me to improve my C programming skills and understand the basic
                                 artificial intelligence concepts.</li>
+
 
 
                         </ul>
@@ -99,12 +107,11 @@
             <h1 class="workh">My Work</h1>
             <div class="workcol">
                 <div class="work-col-1">
-                    <img src="./images/work.jpg" alt="">
+                    <img src="./images/Weather animation.gif" alt="">
                     <div class="workp" onclick="gotoproject()">
                         <h3>City-Weather-App</h3>
                         <p>Instantly fetches accurate weather information for any city worldwide, delivering real-time
-                            forecasts and essential meteorological data at your fingertips.Stay informed and plan your
-                            day with confidence.</p>
+                            forecasts and essential meteorological data at your fingertips.</p>
                     </div>
                 </div>
                 <div class="work-col-1">
